# python-dll-injector

./: LICENSE  README.md  comctl32.py  comdlg32.py  gdi32.py  kernel32.py  main.py  pyproject.toml  user32.py  wintypes_extended.py
src/pydllinjector/: comctl32.py  comdlg32.py  gdi32.py  kernel32.py  main.py  user32.py  winapi_error.py
